finished setting up example page for palletes.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <!--css to add sapcing-->
                 <a href="generator.html"> pallete generator</a>
                 <a href="index.html">create pallete</a>
-                <a href="palletes.html">saved pallete</a>
+                <a href="palletes.html">saved palletes</a>
             </nav>
         </header>
         <main>
