--- a/palletes.html
+++ b/palletes.html
@@ -11,11 +11,22 @@
                 <!--css to add sapcing-->
                 <a href="generator.html"> pallete generator</a>
                 <a href="index.html">create pallete</a>
-                <a href="palletes.html">saved pallete</a>
+                <a href="palletes.html">saved palletes</a>
             </nav>
         </header>
         <main>
-            
+            <div>
+                <img src="Untitled2.png" alt="example array colors" width="300">
+                <button type="button">remove</button>
+            </div>
+            <div>
+                <img src="Untitled2.png" alt="example array colors" width="300">
+                <button type="button">remove</button>
+            </div>
+            <div>
+                <img src="Untitled2.png" alt="example array colors" width="300">
+                <button type="button">remove</button>
+            </div>
         </main>
         <footer>
             <p>Maren Makrush</p>
