--- a/generator.html
+++ b/generator.html
@@ -11,11 +11,11 @@
                 <!--css to add sapcing-->
                 <a href="generator.html"> pallete generator</a>
                 <a href="index.html">create pallete</a>
-                <a href="palletes.html">saved pallete</a>
+                <a href="palletes.html">saved palletes</a>
             </nav>
         </header>
         <main>
-            
+
         </main>
         <footer>
             <p>Maren Makrush</p>
