trying to commit this, hopefully it works, I updated a few things in all the html files but more speicifically the following.html file

--- a/following.html
+++ b/following.html
@@ -16,7 +16,21 @@
             </nav>
         </header>
         <main>
-
+            <div>
+                <img src="Untitled3.png" alt="username" width="300">
+                <button type="button">unfollow</button>
+            </div>
+            <div>
+                <img src="Untitled3.png" alt="username" width="300">
+                <button type="button">unfollow</button>
+            </div>
+            <div>
+                <img src="Untitled3.png" alt="username" width="300">
+                <button type="button">unfollow</button>
+            </div>
+            <div>
+                <input type="email" placeholder="name@email.com">
+            </div>
         </main>
         <footer>
             <p>Maren Makrush</p>
