--- a/generator.html
+++ b/generator.html
@@ -12,6 +12,7 @@
                 <a href="generator.html"> pallete generator</a>
                 <a href="index.html">create pallete</a>
                 <a href="palletes.html">saved palletes</a>
+                <a href="following.html">friends list</a>
             </nav>
         </header>
         <main>
