test please work

--- a/following.html
+++ b/following.html
@@ -16,18 +16,25 @@
             </nav>
         </header>
         <main>
-            <div>
-                <img src="Untitled3.png" alt="username" width="300">
-                <button type="button">unfollow</button>
-            </div>
-            <div>
-                <img src="Untitled3.png" alt="username" width="300">
-                <button type="button">unfollow</button>
-            </div>
-            <div>
-                <img src="Untitled3.png" alt="username" width="300">
-                <button type="button">unfollow</button>
-            </div>
+            <table>
+                <tr>
+                    <th>PERSON USERNAME</th>
+                    <th>UNFOLLOW</th>
+                </tr>
+                <tr>
+                    <td><img src="Untitled3.png" alt="username" width="300"></td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+                <tr>
+                    <td><img src="Untitled3.png" alt="username" width="300"></td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+                <tr>
+                    <td><img src="Untitled3.png" alt="username" width="300"></td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+            </table>
+            
             <div>
                 <input type="email" placeholder="name@email.com">
             </div>
