--- a/palletes.html
+++ b/palletes.html
@@ -16,21 +16,27 @@
             </nav>
         </header>
         <main>
-            <div>
-                <img src="Untitled2.png" alt="example array colors" width="300">
-                <button type="button">remove</button>
-            </div>
-            <div>
-                <img src="Untitled2.png" alt="example array colors" width="300">
-                <button type="button">remove</button>
-            </div>
-            <div>
-                <img src="Untitled2.png" alt="example array colors" width="300">
-                <button type="button">remove</button>
-            </div>
+            <table>
+                <tr>
+                    <th>PALLETE</th>
+                    <th>REMOVE</th>
+                </tr>
+                <tr>
+                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td><button type="button">remove</button></td>
+                </tr>
+                <tr>
+                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td><button type="button">remove</button></td>
+                </tr>
+                <tr>
+                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td><button type="button">remove</button></td>
+                </tr>
+            </table>
         </main>
         <footer>
-            <p>Maren Makrush</p>
+            Maren Makrush
             <a href="https://github.com/crazymay35/startup">github</a>
         </footer>
     </body>
