--- a/select.html
+++ b/select.html
@@ -2,6 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ColorPal</title>
     </head>
     <body>
@@ -9,8 +10,9 @@
             <h1>COLOR PAL</h1>
             <nav>
                 <!--css to add sapcing-->
+                <a href="index.html">login</a>
                 <a href="generator.html"> pallete generator</a>
-                <a href="index.html">create pallete</a>
+                <a href="select.html">create pallete</a>
                 <a href="palletes.html">saved palletes</a>
                 <a href="following.html">friends list</a>
             </nav>
