refining the pages and adding additional functionality

--- a/generator.html
+++ b/generator.html
@@ -11,14 +11,14 @@
             <nav>
                 <!--css to add sapcing-->
                 <a href="index.html">login</a>
-                <a href="generator.html"> pallete generator</a>
-                <a href="select.html">create pallete</a>
+                <a href="generator.html">generate pallete</a>
+                <a href="create.html">create pallete</a>
                 <a href="palletes.html">saved palletes</a>
                 <a href="following.html">friends list</a>
             </nav>
         </header>
         <main>
-
+            <button type="button">generate</button>
         </main>
         <footer>
             <p>Maren Makrush</p>
