--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <header>
-            <h1>COLOR PAL</h1>
+            <h1>WELCOME TO COLOR PAL</h1>
             <nav>
                 <!--css to add sapcing-->
                 <a href="index.html">login</a>
-                <a href="generator.html">pallete generator</a>
-                <a href="select.html">create pallete</a>
+                <a href="generator.html">generate pallete</a>
+                <a href="create.html">create pallete</a>
                 <a href="palletes.html">saved palletes</a>
                 <a href="following.html">friends list</a>
             </nav>
