--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <body>
         <header>
             <h1>WELCOME TO COLOR PAL</h1>
+            <!--navigation to different links-->
             <nav>
                 <!--css to add sapcing-->
-                <a href="index.html">login</a>
-                <a href="generator.html">generate pallete</a>
-                <a href="create.html">create pallete</a>
-                <a href="palletes.html">saved palletes</a>
-                <a href="following.html">friends list</a>
+                <a href="index.html">login</a>&ensp;
+                <a href="generator.html">generate pallete</a>&ensp;
+                <a href="create.html">create pallete</a>&ensp;
+                <a href="palletes.html">saved palletes</a>&ensp;
+                <a href="following.html">friends list</a>&ensp;
             </nav>
         </header>
         <main>
+            <!--logging in or creating account-->
             <div><input type="email" placeholder="name@email.com"></div>
-            <div><input type= "password" name="" id="" placeholder="password"></div>
+            <div><input type= "password" placeholder="password"></div>
             <div><button type="submit">login</button></div>
             <div><button type="submit">create</button></div>
         </main>
         <footer>
-            <p>Maren Makrush</p>
+            <div>Maren Makrush</div>
             <a href="https://github.com/crazymay35/startup">github</a>
         </footer>
     </body>
