--- a/palletes.html
+++ b/palletes.html
@@ -10,13 +10,14 @@
             <h1>COLOR PAL</h1>
             <nav>
                 <!--css to add sapcing-->
-                <a href="index.html">login</a>
-                <a href="generator.html">generate pallete</a>
-                <a href="create.html">create pallete</a>
-                <a href="palletes.html">saved palletes</a>
-                <a href="following.html">friends list</a>
+                <a href="index.html">login</a>&ensp;
+                <a href="generator.html">generate pallete</a>&ensp;
+                <a href="create.html">create pallete</a>&ensp;
+                <a href="palletes.html">saved palletes</a>&ensp;
+                <a href="following.html">friends list</a>&ensp;
             </nav>
         </header>
+        <hr>
         <main>
             <table>
                 <tr>
@@ -37,8 +38,9 @@
                 </tr>
             </table>
         </main>
+        <hr>
         <footer>
-            Maren Makrush
+            <div>Maren Makrush</div>
             <a href="https://github.com/crazymay35/startup">github</a>
         </footer>
     </body>
