doing a lot of different stuff i am sorry

--- a/generator.html
+++ b/generator.html
@@ -10,18 +10,22 @@
             <h1>COLOR PAL</h1>
             <nav>
                 <!--css to add sapcing-->
-                <a href="index.html">login</a>
-                <a href="generator.html">generate pallete</a>
-                <a href="create.html">create pallete</a>
-                <a href="palletes.html">saved palletes</a>
-                <a href="following.html">friends list</a>
+                <a href="index.html">login</a>&ensp;
+                <a href="generator.html">generate pallete</a>&ensp;
+                <a href="create.html">create pallete</a>&ensp;
+                <a href="palletes.html">saved palletes</a>&ensp;
+                <a href="following.html">friends list</a>&ensp;
             </nav>
         </header>
         <main>
+            <div>
+                <img src="Untitled2.png" alt="example array colors" width="300">
+            </div>
             <button type="button">generate</button>
+            <button type="button">Save Pallete</button>
         </main>
         <footer>
-            <p>Maren Makrush</p>
+            <div>Maren Makrush</div>
             <a href="https://github.com/crazymay35/startup">github</a>
         </footer>
     </body>
