updated the pages again

--- a/following.html
+++ b/following.html
@@ -24,7 +24,30 @@
                 <span class="username">I-am-the-current-player</span>
             </div>
             <br>
+            <table class="following-list">
+                <tr class="username"><th>PERSON</th></tr>
+                <tr class="username">
+                    <td>USERNAME1</td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+                <tr class="username">
+                    <td>USERNAME2</td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+                <tr class="username">
+                    <td>USERNAME3</td>
+                    <td><button type="button">unfollow</button></td>
+                </tr>
+            </table>
+            <br>            
+            <div>
+                <input type="email" placeholder="name@email.com">
+                <button type="button">add friend</button>
+            </div>
+            <br>
+            <br>
             <table class="notification">
+                <tr><th>NOTIFICATIONS</th></tr>
                 <tr class="username"> 
                     <td>
                         USERNAME1 made a new pallete! add to collection?
@@ -47,30 +70,6 @@
                     </td>
                 </tr>
             </table>
-            <br>
-            <table class="following-list">
-                <tr class="username">
-                    <th>PERSON</th>
-                    <th>UNFOLLOW</th>
-                </tr>
-                <tr class="username">
-                    <td>USERNAME1</td>
-                    <td><button type="button">unfollow</button></td>
-                </tr>
-                <tr class="username">
-                    <td>USERNAME2</td>
-                    <td><button type="button">unfollow</button></td>
-                </tr>
-                <tr class="username">
-                    <td>USERNAME3</td>
-                    <td><button type="button">unfollow</button></td>
-                </tr>
-            </table>
-            <br>
-            <div>
-                <input type="email" placeholder="name@email.com">
-                <button type="button">add friend</button>
-            </div>
         </main>
         <hr>
         <footer>
