hopefully final update edits and editions. finsihed notes section and readme for completion

--- a/generator.html
+++ b/generator.html
@@ -24,6 +24,9 @@
             </div>
             <button type="button">generate</button>
             <button type="button">Save Pallete</button>
+            <br>
+            <img src="color-splatter.jpg" alt="vibrant splash of bright colors 
+            radiating from the center">
         </main>
         <hr>
         <footer>
