--- a/palletes.html
+++ b/palletes.html
@@ -25,14 +25,17 @@
                     <th>REMOVE</th>
                 </tr>
                 <tr>
+                    <td><button type="button">share</button></td>
                     <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
                     <td><button type="button">remove</button></td>
                 </tr>
                 <tr>
+                    <td><button type="button">share</button></td>
                     <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
                     <td><button type="button">remove</button></td>
                 </tr>
                 <tr>
+                    <td><button type="button">share</button></td>
                     <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
                     <td><button type="button">remove</button></td>
                 </tr>
