adjusted image in generator.html

--- a/generator.html
+++ b/generator.html
@@ -22,11 +22,16 @@
             <div>
                 <img src="Untitled2.png" alt="example array colors" width="300">
             </div>
-            <button type="button">generate</button>
-            <button type="button">Save Pallete</button>
+            <div>
+                <button type="button">generate</button>
+                <button type="button">Save Pallete</button>
+            </div>
             <br>
-            <img src="color-splatter.jpg" alt="vibrant splash of bright colors 
-            radiating from the center">
+            <div>
+                <img src="color-splatter.jpg" alt="vibrant splash of bright colors 
+                radiating from the center" width="400">
+            </div>
+            
         </main>
         <hr>
         <footer>
