--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>WELCOME TO COLOR PAL</h1>
+            <h1>COLOR PAL</h1>
             <!--navigation to different links-->
             <nav>
                 <!--css to add sapcing-->
@@ -20,11 +20,15 @@
         </header>
         <hr>
         <main>
+            <h2>WELCOME TO COLOR PAL!</h2>
             <!--logging in or creating account-->
             <div><input type="email" placeholder="name@email.com"></div>
             <div><input type= "password" placeholder="password"></div>
-            <div><button type="submit">login</button></div>
-            <div><button type="submit">create</button></div>
+            <br>
+            <div>
+                <button type="submit">login</button>
+                <button type="submit">create</button>
+            </div>
         </main>
         <hr>
         <footer>
