changed person to friend in following.html

--- a/following.html
+++ b/following.html
@@ -25,7 +25,7 @@
             </div>
             <br>
             <table class="following-list">
-                <tr class="username"><th>PERSON</th></tr>
+                <tr class="username"><th>FRIEND</th></tr>
                 <tr class="username">
                     <td>USERNAME1</td>
                     <td><button type="button">unfollow</button></td>
