changed placeholder images to svg squares, better utility for when do css and javascript

--- a/create.html
+++ b/create.html
@@ -20,7 +20,13 @@
         <hr>
         <main>
             <div>
-                <img src="Untitled.png" alt="example 2 color squares" width="300">
+                <svg width="114" height="114">
+                    <rect x="7" y="7" width="100" height="100" fill="black" />
+                </svg>
+                &emsp;&emsp;&emsp;&emsp;
+                <svg width="114" height="114">
+                    <rect x="7" y="7" width="100" height="100" fill="black" />
+                </svg>
             </div>
             <div>
                 <label>R</label>
@@ -44,7 +50,13 @@
                 <input type="range" min="0" max="255" name="B">
             </div>
             <div>
-                <img src="Untitled2.png" alt="example array colors" width="300">
+                <svg width="304" height="64">
+                    <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                </svg>
             </div>
             <div>
                 <button type="button">Save Pallete</button>
