--- a/generator.html
+++ b/generator.html
@@ -20,7 +20,13 @@
         <hr>
         <main>
             <div>
-                <img src="Untitled2.png" alt="example array colors" width="300">
+                <svg width="304" height="64">
+                    <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                    <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                </svg>
             </div>
             <div>
                 <button type="button">generate</button>
