--- a/palletes.html
+++ b/palletes.html
@@ -27,17 +27,41 @@
                 </tr>
                 <tr>
                     <td><button type="button">share</button></td>
-                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td>
+                        <svg width="304" height="64">
+                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                        </svg>
+                    </td>
                     <td><button type="button">remove</button></td>
                 </tr>
                 <tr>
                     <td><button type="button">share</button></td>
-                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td>
+                        <svg width="304" height="64">
+                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                        </svg>
+                    </td>
                     <td><button type="button">remove</button></td>
                 </tr>
                 <tr>
                     <td><button type="button">share</button></td>
-                    <td><img src="Untitled2.png" alt="example array colors" width="300"></td>
+                    <td>
+                        <svg width="304" height="64">
+                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
+                        </svg>
+                    </td>
                     <td><button type="button">remove</button></td>
                 </tr>
             </table>
