made the generator pic look cool and epic

--- a/generator.html
+++ b/generator.html
@@ -20,6 +20,10 @@
         <hr>
         <main>
             <div>
+                <img src="color-splatter-top.jpg" alt="vibrant splash of bright colors 
+                radiating from bottom half" width="400">
+            </div>
+            <div>
                 <svg width="304" height="64">
                     <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
                     <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
@@ -34,8 +38,8 @@
             </div>
             <br>
             <div>
-                <img src="color-splatter.jpg" alt="vibrant splash of bright colors 
-                radiating from the center" width="400">
+                <img src="color-splatter-bottom.jpg" alt="vibrant splash of bright colors 
+                radiating from top half" width="400">
             </div>
             
         </main>
