--- a/palletes.html
+++ b/palletes.html
@@ -2,19 +2,23 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>ColorPal</title>
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <h1>COLOR PAL</h1>
             <nav>
-                <!--css to add sapcing-->
-                <a href="index.html">login</a>&ensp;
-                <a href="generator.html">generate pallete</a>&ensp;
-                <a href="create.html">create pallete</a>&ensp;
-                <a href="palletes.html">saved palletes</a>&ensp;
-                <a href="following.html">friends list</a>&ensp;
+                <ul>
+                    <li><a href="index.html">login</a></li>
+                    <li><a href="generator.html">generate pallete</a></li>
+                    <li><a href="create.html">create pallete</a></li>
+                    <li><a href="palletes.html">saved palletes</a></li>
+                    <li><a href="following.html">friends list</a></li>
+                </ul>
             </nav>
         </header>
         <hr>
