finished footer, tweaked the header a bit too. login page aka index.html is finished. later i might add an animated color gradient

--- a/following.html
+++ b/following.html
@@ -76,8 +76,8 @@
         </main>
         <hr>
         <footer>
-            Maren Makrush
-            <a href="https://github.com/crazymay35/startup">github</a>
+            <span>Maren Makrush</span>
+            <span><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
