--- a/create.html
+++ b/create.html
@@ -62,8 +62,8 @@
         </main>
         <hr>
         <footer>
-            Maren Makrush
-            <a href="https://github.com/crazymay35/startup">github</a>
+            <span>Maren Makrush</span>
+            <span><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
