--- a/generator.html
+++ b/generator.html
@@ -48,8 +48,8 @@
             
         </main>
         <footer>
-            Maren Makrush
-            <a href="https://github.com/crazymay35/startup">github</a>
+            <span>Maren Makrush</span>
+            <span><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
