--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
