added id attribute index.html, added class buttons, thinking about generator.html

--- a/generator.html
+++ b/generator.html
@@ -26,7 +26,6 @@
                 <img src="color-splatter-top.jpg" alt="vibrant splash of bright colors 
                 radiating from bottom half" width="400">
             </div>
-            <br>
             <div>
                 <svg width="304" height="64">
                     <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
@@ -37,10 +36,9 @@
                 </svg>
             </div>
             <div>
-                <button type="button">generate</button>
-                <button type="button">Save Pallete</button>
+                <button type="button" class="btn btn-primary my-button">generate</button>
+                <button type="button" class="btn btn-secondary">save pallete</button>
             </div>
-            <br>
             <div>
                 <img src="color-splatter-bottom.jpg" alt="vibrant splash of bright colors 
                 radiating from top half" width="400">
@@ -49,7 +47,7 @@
         </main>
         <footer>
             <span>Maren Makrush</span>
-            <span><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
