--- a/palletes.html
+++ b/palletes.html
@@ -72,7 +72,7 @@
         <hr>
         <footer>
             <span>Maren Makrush</span>
-            <span><a href="https://github.com/crazymay35/startup">github</a></span>
+            <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
         </footer>
     </body>
 </html>
