--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>ColorPal</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Fuzzy+Bubbles:wght@700&family=Indie+Flower&display=swap" rel="stylesheet">
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
@@ -23,12 +27,12 @@
         </header>
         <main>
             <form method="get" action="create.html">
-                <h3>WELCOME TO</h3>
+                <h3 id="faculty-glyphic-regular">WELCOME TO</h3>
                 <h2>COLOR PAL!</h2>
                 <div><input type="email" class="form-control" placeholder="example@email.com"></div>
-                <div><input type= "password" class="form-control" placeholder="password"></div>
+                <div><input type="password" class="form-control" placeholder="password"></div>
                 <div>
-                    <button type="submit" class="btn btn-primary">login</button>
+                    <button type="submit" class="btn btn-primary my-button">login</button>
                     <button type="submit" class="btn btn-secondary">create</button>
                 </div>
             </form>
