--- a/generator.html
+++ b/generator.html
@@ -21,29 +21,22 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main>
-            <div>
-                <img src="color-splatter-top.jpg" alt="vibrant splash of bright colors 
-                radiating from bottom half" width="400">
+        <main class="main-generator">
+            <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
+            radiating from bottom half">
+            <div class="color-box-container">
+                <div class="inner-box"></div>
+                <div class="inner-box"></div>
+                <div class="inner-box"></div>
+                <div class="inner-box"></div>
+                <div class="inner-box"></div>
             </div>
             <div>
-                <svg width="304" height="64">
-                    <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                </svg>
-            </div>
-            <div>
-                <button type="button" class="btn btn-primary my-button">generate</button>
                 <button type="button" class="btn btn-secondary">save pallete</button>
+                <button type="button" class="btn btn-primary my-button">generate</button>
             </div>
-            <div>
-                <img src="color-splatter-bottom.jpg" alt="vibrant splash of bright colors 
-                radiating from top half" width="400">
-            </div>
-            
+            <!--<img src="color-splatter-left.jpg" alt="vibrant splash of bright colors 
+            radiating from top half">-->
         </main>
         <footer>
             <span>Maren Makrush</span>
