finished generator, tweaked a few things in index.html

--- a/generator.html
+++ b/generator.html
@@ -21,22 +21,26 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main class="main-generator">
-            <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
+        <main style="flex-direction:row; overflow: hidden;">
+                <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
             radiating from bottom half">
-            <div class="color-box-container">
-                <div class="inner-box"></div>
-                <div class="inner-box"></div>
-                <div class="inner-box"></div>
-                <div class="inner-box"></div>
-                <div class="inner-box"></div>
+            <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">save pallete</button>
+                    <button type="button" class="btn btn-secondary">generate</button>
+                </div>
             </div>
-            <div>
-                <button type="button" class="btn btn-secondary">save pallete</button>
-                <button type="button" class="btn btn-primary my-button">generate</button>
-            </div>
-            <!--<img src="color-splatter-left.jpg" alt="vibrant splash of bright colors 
-            radiating from top half">-->
+            
+            <img src="color-splatter-left.jpg" alt="vibrant splash of bright colors 
+            radiating from top half">
+            
         </main>
         <footer>
             <span>Maren Makrush</span>
