--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
                 </ul>
             </nav>
         </header>
-        <main class="main-transparent-container">
-            <h3 id="faculty-glyphic-regular">WELCOME TO</h3>
-            <h2>COLOR PAL!</h2>            
-            <form method="get" action="create.html">
-                <input type="email" class="form-control" placeholder="example@email.com">
-                <input type="password" class="form-control" placeholder="password">
-                <span>
-                    <button type="submit" class="btn btn-primary my-button">login</button>
-                    <button type="submit" class="btn btn-secondary">create</button>
-                </span>
-            </form>
+        <main>
+            <div class="main-transparent-container">
+                <h3 id="faculty-glyphic-regular">WELCOME TO</h3>
+                <h2>COLOR PAL!</h2>            
+                <form method="get" action="create.html">
+                    <input type="email" class="form-control" placeholder="example@email.com">
+                    <input type="password" class="form-control" placeholder="password">
+                    <span>
+                        <button type="submit" class="btn btn-primary my-button">login</button>
+                        <button type="submit" class="btn btn-secondary">create</button>
+                    </span>
+                </form>
+            </div>
         </main>
         <footer>
             <span>Maren Makrush</span>
