--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="index-styles.css">
     </head>
-    <body class="gradient-body">
+    <body>
         <header>
             <h1>COLOR PAL</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">login</a></li>
-                    <li><a href="generator.html">generate</a></li>
-                    <li><a href="create.html">create</a></li>
-                    <li><a href="palletes.html">palletes</a></li>
-                    <li><a href="following.html">friends</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="index.html">login</a></li>
+                <li><a href="generator.html">generate</a></li>
+                <li><a href="create.html">create</a></li>
+                <li><a href="palletes.html">palletes</a></li>
+                <li><a href="following.html">friends</a></li>
+            </ul>
         </header>
-        <main>
+        <main class="gradient-body">
             <div class="main-transparent-container">
                 <h3 id="faculty-glyphic-regular">WELCOME TO</h3>
                 <h2>COLOR PAL!</h2>            
