--- a/generator.html
+++ b/generator.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="generator-styles.css">
     </head>
     <body>
         <header>
@@ -21,8 +21,8 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main style="flex-direction:row; overflow: hidden;">
-                <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
+        <main class="main-generator">
+            <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
             radiating from bottom half">
             <div class="container">
                 <div class="color-box-container">
