--- a/palletes.html
+++ b/palletes.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="palletes-styles.css">
     </head>
     <body>
         <header>
@@ -21,55 +21,112 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main>
-            <table>
-                <tr>
-                    <th></th>
-                    <th>PALLETE</th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <td><button type="button">remove</button></td>
-                    <td>
-                        <svg width="304" height="64">
-                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                        </svg>
-                    </td>
-                    <td><button type="button">share</button></td>
-                </tr>
-                <tr>
-                    <td><button type="button">remove</button></td>
-                    <td>
-                        <svg width="304" height="64">
-                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                        </svg>
-                    </td>
-                    <td><button type="button">share</button></td>
-                </tr>
-                <tr>
-                    <td><button type="button">remove</button></td>
-                    <td>
-                        <svg width="304" height="64">
-                            <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                            <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                        </svg>
-                    </td>
-                    <td><button type="button">share</button></td>
-                </tr>
-            </table>
+        <main class="main-container">
+            <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
+                        <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">share</button>
+                    <button type="button" class="btn btn-secondary">remove</button>
+                </div>
+            </div>
         </main>
-        <hr>
         <footer>
             <span>Maren Makrush</span>
             <span style="justify-content: end;"><a href="https://github.com/crazymay35/startup">github</a></span>
