--- a/create.html
+++ b/create.html
@@ -22,41 +22,32 @@
             </ul>
         </header>
         <main>
-            <table>
-                <tr>
-                    <td>
-                        <svg width="114" height="114">
-                            <rect x="7" y="7" width="100" height="100" fill="black" />
-                        </svg>
-                    </td>
-                    <td><label>R <input type="range" min="0" max="255" name="R"></label></td>
-                    <td><label>G <input type="range" min="0" max="255" name="G"></label></td>
-                    <td><label>B <input type="range" min="0" max="255" name="B"></label></td>
-                    
-                </tr>
-                <tr>
-                    <td>
-                        <svg width="114" height="114">
-                            <rect x="7" y="7" width="100" height="100" fill="black" />
-                        </svg>
-                    </td>
-                    <td><label>R <input type="range" min="0" max="255" name="R"></label></td>
-                    <td><label>G <input type="range" min="0" max="255" name="G"></label></td>
-                    <td><label>B <input type="range" min="0" max="255" name="B"></label></td>
-                    
-                </tr>
-            </table>
-            <div>
-                <svg width="304" height="64">
-                    <rect x="2" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="62" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="122" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="182" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                    <rect x="242" y="2" width="60" height="60" fill="none" stroke="black" stroke-width="2"/>
-                </svg>
+            <div class="container-boxes">
+                <div class="container-color">
+                    <div class="color-box-selector"></div>
+                    <label>R <input type="range" min="0" max="255" name="R"></label>
+                    <label>G <input type="range" min="0" max="255" name="G"></label>
+                    <label>B <input type="range" min="0" max="255" name="B"></label>
+                </div>
+                <div class="container-color">
+                    <div class="color-box-selector"></div>
+                    <label>R <input type="range" min="0" max="255" name="R"></label>
+                    <label>G <input type="range" min="0" max="255" name="G"></label>
+                    <label>B <input type="range" min="0" max="255" name="B"></label>
+                </div>
             </div>
-            <div>
-                <button type="button" class="btn btn-primary my-button">Save Pallete</button>
+            <div class="container">
+                <div class="color-box-container">
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                    <div class="inner-box"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary my-button">save pallete</button>
+                    <button type="button" class="btn btn-secondary">generate</button>
+                </div>
             </div>
         </main>
         <footer>
