changered generator.html layout, debating changing create.html layout too and possibly others as well for sake of uniformity, cheers to css stuff

--- a/generator.html
+++ b/generator.html
@@ -12,7 +12,10 @@
     </head>
     <body>
         <header>
-            <h1>COLOR PAL</h1>
+            <h1>
+                <img src="paintbrush-and-palette-svgrepo-com.svg" 
+                alt="icon of a paintbrush and a color pallete">
+                COLOR PAL</h1>
             <ul>
                 <li><a href="index.html">login</a></li>
                 <li><a href="generator.html">generate</a></li>
@@ -22,9 +25,7 @@
             </ul>
         </header>
         <main class="main-generator">
-            <img src="color-splatter-right.jpg" alt="vibrant splash of bright colors 
-            radiating from bottom half">
-            <div class="container">
+            <div class="container main-transparent-container">
                 <div class="color-box-container">
                     <div class="inner-box"></div>
                     <div class="inner-box"></div>
@@ -36,11 +37,7 @@
                     <button type="button" class="btn btn-primary my-button">save pallete</button>
                     <button type="button" class="btn btn-secondary">generate</button>
                 </div>
-            </div>
-            
-            <img src="color-splatter-left.jpg" alt="vibrant splash of bright colors 
-            radiating from top half">
-            
+            </div>            
         </main>
         <footer>
             <span>Maren Makrush</span>
