--- a/generator.html
+++ b/generator.html
@@ -15,7 +15,8 @@
             <h1>
                 <img src="paintbrush-and-palette-svgrepo-com.svg" 
                 alt="icon of a paintbrush and a color pallete">
-                COLOR PAL</h1>
+                COLOR PAL
+            </h1>
             <ul>
                 <li><a href="index.html">login</a></li>
                 <li><a href="generator.html">generate</a></li>
