--- a/palletes.html
+++ b/palletes.html
@@ -12,7 +12,11 @@
     </head>
     <body>
         <header>
-            <h1>COLOR PAL</h1>
+            <h1>
+                <img src="paintbrush-and-palette-svgrepo-com.svg" 
+                alt="icon of a paintbrush and a color pallete">
+                COLOR PAL
+            </h1>
             <ul>
                 <li><a href="index.html">login</a></li>
                 <li><a href="generator.html">generate</a></li>
