tweaked a few layout things for following.html so it will look nice on the phone. got rid of animated background for index.html (still undecided on this)

--- a/following.html
+++ b/following.html
@@ -29,7 +29,7 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main>
+        <main class="main-container">
             <div class="main-transparent-container">
                 <span>You Are: &emsp; current-player</span>
                 <span id="faculty-glyphic-regular">FRIENDS</span>
