--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="following.html">friends</a></li>
             </ul>
         </header>
-        <main class="gradient-body">
+        <main>
             <div class="main-transparent-container">
                 <h3 id="faculty-glyphic-regular">WELCOME TO</h3>
                 <h2>COLOR PAL!</h2>            
